--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://RobertWay.github.io",
+  "homepage": "https://robertway26.github.io/",
   "name": "portfolio",
   "version": "0.1.0",
   "private": true,
